--- a/srcs/containers/mysql/Dockerfile
+++ b/srcs/containers/mysql/Dockerfile
@@ -1,14 +1,16 @@
 FROM alpine
 
 RUN apk update && apk upgrade
-RUN apk add openrc mariadb mariadb-common mariadb-client
-RUN openrc default
-RUN touch /run/openrc/softlevel
+RUN apk add mariadb mariadb-common mariadb-client
 
+RUN mkdir -p /run/mysqld
+
+COPY ./srcs/wordpress.sql ./
 COPY ./srcs/run.sh . 
 
 EXPOSE 3306
 
+RUN chmod 777 ./wordpress.sql
 RUN chmod 777 ./run.sh
 
 CMD ./run.sh
