--- a/srcs/containers/nginx/srcs/nginx.conf
+++ b/srcs/containers/nginx/srcs/nginx.conf
@@ -3,6 +3,8 @@ events {
 }
 
 http {
+	include mime.types;
+
 	server {
 		listen 80 default_server;
 		listen [::]:80 default_server;
@@ -23,10 +25,14 @@ http {
 		server_name ft_services;
 	
 		index index.html;
-	
-		location / {
-			autoindex on;
-			try_files $uri $uri/ =404;
+
+		location /wordpress {
+			return 307 http://172.17.0.4:5050;
+		}
+		location /phpmyadmin/ {
+			proxy_set_header X-Forwarded-Proto https;
+			proxy_pass http://172.17.0.3:5000/;
+			proxy_redirect /index.php /phpmyadmin/index.php;
 		}
 	}
 }
