--- a/srcs/containers/grafana/Dockerfile
+++ b/srcs/containers/grafana/Dockerfile
@@ -1,9 +1,13 @@
 FROM	alpine
 
 RUN	apk update && apk upgrade
-RUN	apk add grafana --repository http://dl-cdn.alpinelinux.org/alpine/edge/community
+RUN	apk add grafana --no-cache
 
 COPY	./srcs/run.sh ./run.sh
+
+COPY	./srcs/dashboards /var/lib/grafana/dashboards/
+COPY	./srcs/provisioning/dashboards/dashboards.yaml /usr/share/grafana/conf/provisioning/dashboards/dashboards.yaml
+COPY	./srcs/provisioning/datasources/influxdb.yaml /usr/share/grafana/conf/provisioning/datasources/influxdb.yaml
 
 RUN	chmod +x ./run.sh
 
