--- a/srcs/containers/telegraf/Dockerfile
+++ b/srcs/containers/telegraf/Dockerfile
@@ -1,16 +1,7 @@
 FROM	alpine
 
 RUN	apk update && apk upgrade
-RUN	apk add wget tar
-
-RUN	mkdir -p /etc/telegraf
-RUN	wget https://dl.influxdata.com/telegraf/releases/telegraf-1.17.2_linux_amd64.tar.gz
-RUN	tar -zxf telegraf-1.17.2_linux_amd64.tar.gz
-RUN	mv telegraf-1.17.2 telegraf
-RUN	rm telegraf-1.17.2_linux_amd64.tar.gz
-
-RUN	cp -rf telegraf/etc/* /etc/
-RUN	cp -rf telegraf/usr/* /usr/
+RUN	apk add telegraf
 
 COPY	./srcs/telegraf.conf /etc/telegraf/
 
