--- a/srcs/containers/nginx/srcs/nginx.conf
+++ b/srcs/containers/nginx/srcs/nginx.conf
@@ -26,12 +26,12 @@ http {
 	
 		index index.html;
 
-		location /wordpress {
+		location /wordpress/ {
 			return 307 http://172.17.0.2:5050;
 		}
 		location /phpmyadmin/ {
 			proxy_set_header X-Forwarded-Proto https;
-			proxy_pass http://172.17.0.2:5000/;
+			proxy_pass http://phpmyadmin:5000/;
 			proxy_redirect /index.php /phpmyadmin/index.php;
 		}
 	}
