--- a/srcs/yaml/nginx.yaml
+++ b/srcs/yaml/nginx.yaml
@@ -46,7 +46,7 @@ spec:
       containers:
       - name: nginx
         image: juyang_nginx
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Never
         ports:
         - containerPort: 80
           name: http
